Project physical_ecommerce {
  database_type: "PostgreSQL"
  Note: 'Физическая модель (фрагмент из реальной схемы public): customers, orders, order_items, products.'
}

Table customers {
  id int [pk, increment, note: 'PK клиента']
  name varchar(100) [not null, note: 'Имя клиента']
  email varchar(255) [not null, unique, note: 'Уникальный email']
  phone varchar(20) [note: 'Телефон']
  password_hash varchar(255) [note: 'Хеш пароля']
  is_verified boolean [not null, default: false, note: 'Верификация']
  created_at timestamptz [not null, default: `now()`, note: 'Дата регистрации']

  Note: '[DAMA-DMBOK: Master Data] Покупатели.'
}

Table products {
  id int [pk, increment, note: 'PK товара']
  sku varchar(20) [not null, unique, note: 'SKU']
  name varchar(255) [not null, note: 'Название товара']
  description text [note: 'Описание']
  price numeric(10,2) [not null, note: 'Цена >= 0']
  category_id int [note: 'FK на categories (вне данной диаграммы)']
  brand varchar(100) [note: 'Бренд']
  image_url varchar(500) [note: 'URL изображения']
  is_active boolean [not null, default: true, note: 'Активность']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    category_id
    sku
  }

  Note: '[DAMA-DMBOK: Master Data] Товары каталога.'
}

Table orders {
  order_id varchar(20) [pk, note: 'PK заказа (бизнес-ID)']
  customer_id int [not null, note: 'FK на customers']
  status varchar(20) [not null, default: 'created', note: 'created|paid|processing|shipped|delivered|cancelled']
  is_paid boolean [not null, default: false, note: 'Флаг оплаты']
  comment text [note: 'Комментарий']
  source varchar(20) [note: 'Канал оформления']
  ip varchar(45) [note: 'IP клиента']
  tags text[] [note: 'Теги']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    customer_id
    status
    created_at
  }

  Note: '[DAMA-DMBOK: Transactional Data] Заказы.'
}

Table order_items {
  id int [pk, increment, note: 'PK позиции']
  order_id varchar(20) [not null, note: 'FK на orders']
  product_id varchar(20) [not null, note: 'SKU/ID в момент заказа']
  name varchar(255) [not null, note: 'Название в snapshot']
  quantity int [not null, note: 'Количество > 0']
  price numeric(10,2) [not null, note: 'Цена >= 0']
  in_stock boolean [not null, default: true, note: 'Наличие']

  indexes {
    order_id
  }

  Note: '[DAMA-DMBOK: Transactional Data] Позиции заказа.'
}

Ref: orders.customer_id > customers.id
Ref: order_items.order_id > orders.order_id [delete: cascade]
